turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:7: error: ')' expected but '.' found.
       setCouleurBrosse(colors(i+1)colors.length);baisseBrosse();leveBrosse()
                                         ^LangtonsAnt:8: error: ';' expected but ')' found.
    if(rule(x)=='L'){gauche();avance();}
                   ^